fix prisma wasn't calling `posts` was calling `items`
